# rig-rag

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  env.example  package.json
.cargo/: config.toml
data/: config.toml  preamble.md  preamble.txt
docs/: DEPLOY.md  env.example  error.txt  start.sh  stop.sh
documents/: game.md  preamble.txt  test.md
examples/: agent_tools.rs  mcp_e.rs  md_agent.rs  pdf_agent.rs  rig_core_0_22_base64_repro.rs  rig_lancedb_example.rs  simple_completion_test.rs
frontend/: admin.html  build-terser.js  index.html  login.html
frontend/js/: admin.js  chatbot.js  login.js
http/: test.http  test_ali.http  test_sili.http
src/: cli_chatbot.rs  config.rs  lib.rs  main.rs
src/agent/: file_chunk.rs  mod.rs  rig_agent.rs  rig_agent_builder.rs
src/db/: conversation_store.rs  lancedb_store.rs  mod.rs  qdrant_store.rs  user_store.rs
src/utils/: document_parser.rs  file_backup.rs  mod.rs
src/utils/logger/: formatter.rs  init_log.rs  log_config.rs  mod.rs
src/web/: auth_routes.rs  chat_route.rs  conversation_routes.rs  document_routes.rs  mod.rs  preamble_routes.rs  root.rs  state.rs  user_routes.rs
static/: README.md  admin.html  admin.js  chatbot-embed.html  chatbot.js  index.html  login.html
static/js/: admin.js  chatbot.js  login.js
